jss-compiler/tests/semantic_errors/method_namespace_conflict.jss
class A {
    A constructor() {}
    void f() {}
}
function void main() {
    f();
}
